--- a/LAB5/pictures.html
+++ b/LAB5/pictures.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/footer.ccs">
     </head>
     <body>
          <header>
@@ -25,7 +26,7 @@
                     <a class="nav-link" href="/">Home</a>
                    </li>
                    <li class="nav-item">
-                    <a class="nav-link" href="#">My Bio</a>
+                    <a class="nav-link" href="/LAB2/">My Bio</a>
                    </li>
                    <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
@@ -33,6 +34,7 @@
                     </a>
                      <div class="dropdown-menu">
                         <a class="dropdown-item" href="/LAB2/index.html">LAB2</a>
+                        https://bookish-fiesta-697q69wwwj94f5xxx-5501.app.github.dev/#:~:text=LAB3,-LAB4,-LAB7,LAB8,-LAB9,-LAB10
                      </div>
                    </li>
                    <li class="nav-item dropdown">
@@ -41,9 +43,10 @@
                      </a>
                    <div class="dropdown-menu">
                     <a class="dropdown-item" href=" /HW2/index.html">HW2</a>
+                     https://bookish-fiesta-697q69wwwj94f5xxx-5501.app.github.dev/#:~:text=HW3,-HW4,-HW5,-HW6,-HW7,-HW8,-HW9,-HW10
                    </div>
                 </li>
-
+                  https://bookish-fiesta-697q69wwwj94f5xxx-5501.app.github.dev/#:~:text=LECTURE6
                 </ul>
 
              </div>
@@ -61,7 +64,7 @@
                 <div class="container">
                     <h1 class="display-4 fw-fold">Welcome to My Website</h1>
                     <p class="lead">Making the future brighter day-by-day.></p>
-                    <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+                    <a href="/LAB2/" class="btn btn-primary btn-lg">Learn More</a>
                 </div>
             </div>
         </section>
@@ -76,21 +79,21 @@
                             <h3>Homework</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elite...</p>
                             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-                            <a href="#" class="btn btn-primary">Learn more</a>
+                            <a href="/HW/" class="btn btn-primary">Learn more</a>
                         </div>
 
                         <div class="col-sm-4 mb-3">
                             <h3>Labs</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elite...</p>
                             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-                            <a href="#" class="btn btn-primary">Learn more</a>
+                            <a href="/LAB/" class="btn btn-primary">Learn more</a>
                         </div>
 
                         <div class="col-sm-4 mb-3">
                             <h3>My Bio Page</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elite...</p>
                              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-                              <a href="#" class="btn btn-primary">Learn more</a>
+                              <a href="/HW2/" class="btn btn-primary">Learn more</a>
                         </div>
                         
                     </div>
@@ -101,5 +104,52 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
+<!-- Footer Section -->
+ <footer class="footer text-center text-lg-start mt-5">
+    <div class="content">
+        <div class="row">
 
+            <!-- About Section -->
+             <div class="col-lg-4 col-md6 mb-4">
+                  <h5 class="text-uppercase">About Me</h5>
+                  <p>
+                    I'm a junior developer with a passion for coding, problen-solving, and learning new
+                    techologies.
+                    I recently started my journey in web developer, focusing on building strong foundations in
+                    HTML,CSS, and JavaScript.
+                  </p>
+             </div>
+        </div>
+        
+<!-- Quick Links -->
+     <div class="col-lg-4 col-md-6 mb-4">
+        <h5 class="text-uppercase">Quick Links</h5>
+        <ul class="list-unstyled">
+            <li><a href="/">Home</a></li>
+            <li><a href="/LAB2">My Bio</a></li>
+            <li><a href="/LAB3/">Contact Me</a></li>
+            <li><a href="/LAB7/">Photo Gallery</a></li>
+        </ul>
+     </div>
+
+    <!-- Social Media Links -->
+    <div class="col-lg-4 col-md-12">
+        <h5 class="text-uppercase">Follow Me</h5>
+        <a href="#" class="me-3">
+            <img src="https://img.icons8.com/tos-filled/38/ffffff/facebook.png" alt="Facebook">
+        </a>
+        <a href="#" class="me-3">
+            <img src="https://img.icons8.com/tos-filled/38/ffffff/twitter.png" alt="Twitter">
+        </a>
+        <a href="#">
+            <img src="https://img.icons8.com/tos-filled/38/ffffff/instagram.png" alt="instagram">
+        </a>
+    </div>
+
+    <!-- Copyright Section -->
+    <div class="text-center mt-4">
+        <p class="mb-0">&copy;2024 MyWebsite. All Rights Reserved.</p>
+    </div>
+    </div>
+ </footer>
 
